Fix About Us group photo width on mobile.

--- a/about/about-us/styles/index.scss
+++ b/about/about-us/styles/index.scss
@@ -2,4 +2,8 @@
 
 .group-photo {
   text-align: center;
+
+  img {
+    width: 100%;
+  }
 }
